# codebase-mem

./: .pre-commit-config.yaml  Cargo.toml  clippy.toml  deny.toml
.github/workflows/: ci.yml
crates/ci-core/: Cargo.toml
crates/ci-core/src/: interner.rs  lang_spec.rs  language.rs  lib.rs
crates/ci-core/src/specs/: c.rs  cpp.rs  go.rs  java.rs  kotlin.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/ci-discover/: Cargo.toml
crates/ci-discover/src/: lib.rs
crates/ci-graph/: Cargo.toml  README.md
crates/ci-graph/benches/: benchmarks.rs
crates/ci-graph/src/: frozen_graph.rs  lib.rs  mutable_graph.rs  persistence.rs
crates/ci-parser/: Cargo.toml
crates/ci-parser/src/: extractor.rs  grammar.rs  lib.rs  pool.rs
docs/: DESIGN.md  E2-1-DISCOVERY.md  E2-2-PARSER.md  E2-3-DECLARATIVE-SPEC.md  IMPLEMENTATION_PLAN.md
hooks/: pre-commit
