[package]
name = "ci-graph"
version = "0.1.0"
edition = "2021"
description = "Mutable and frozen graph structures for the Codebase Intelligence Engine"

[dependencies]
ci-core = { path = "../ci-core" }
rkyv = { version = "0.8.15", default-features = false, features = ["std", "alloc", "bytecheck", "hashbrown-0_15", "smallvec-1"] }
parking_lot = "0.12"
rayon = "1.10"
roaring = "0.10"
fst = "0.4"
smallvec = "1"
memmap2 = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "2"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
ci-core = { path = "../ci-core" }
tempfile = "3"
criterion = "0.5"
num_cpus = "1"
fastrand = "2"
